; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_shader_sm4.c_get_opcode_info.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_shader_sm4.c_get_opcode_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_sm4_opcode_info = type { i32 }

@opcode_table = common dso_local global %struct.wined3d_sm4_opcode_info* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.wined3d_sm4_opcode_info* (i32)* @get_opcode_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.wined3d_sm4_opcode_info* @get_opcode_info(i32 %0) #0 {
  %2 = alloca %struct.wined3d_sm4_opcode_info*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %25, %1
  %6 = load i32, i32* %4, align 4
  %7 = load %struct.wined3d_sm4_opcode_info*, %struct.wined3d_sm4_opcode_info** @opcode_table, align 8
  %8 = call i32 @ARRAY_SIZE(%struct.wined3d_sm4_opcode_info* %7)
  %9 = icmp ult i32 %6, %8
  br i1 %9, label %10, label %28

10:                                               ; preds = %5
  %11 = load i32, i32* %3, align 4
  %12 = load %struct.wined3d_sm4_opcode_info*, %struct.wined3d_sm4_opcode_info** @opcode_table, align 8
  %13 = load i32, i32* %4, align 4
  %14 = zext i32 %13 to i64
  %15 = getelementptr inbounds %struct.wined3d_sm4_opcode_info, %struct.wined3d_sm4_opcode_info* %12, i64 %14
  %16 = getelementptr inbounds %struct.wined3d_sm4_opcode_info, %struct.wined3d_sm4_opcode_info* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = icmp eq i32 %11, %17
  br i1 %18, label %19, label %24

19:                                               ; preds = %10
  %20 = load %struct.wined3d_sm4_opcode_info*, %struct.wined3d_sm4_opcode_info** @opcode_table, align 8
  %21 = load i32, i32* %4, align 4
  %22 = zext i32 %21 to i64
  %23 = getelementptr inbounds %struct.wined3d_sm4_opcode_info, %struct.wined3d_sm4_opcode_info* %20, i64 %22
  store %struct.wined3d_sm4_opcode_info* %23, %struct.wined3d_sm4_opcode_info** %2, align 8
  br label %29

24:                                               ; preds = %10
  br label %25

25:                                               ; preds = %24
  %26 = load i32, i32* %4, align 4
  %27 = add i32 %26, 1
  store i32 %27, i32* %4, align 4
  br label %5

28:                                               ; preds = %5
  store %struct.wined3d_sm4_opcode_info* null, %struct.wined3d_sm4_opcode_info** %2, align 8
  br label %29

29:                                               ; preds = %28, %19
  %30 = load %struct.wined3d_sm4_opcode_info*, %struct.wined3d_sm4_opcode_info** %2, align 8
  ret %struct.wined3d_sm4_opcode_info* %30
}

declare dso_local i32 @ARRAY_SIZE(%struct.wined3d_sm4_opcode_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
